<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".Actividades.login.CrearCuentaActivity">

    <ImageView
        android:id="@+id/icono"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        app:srcCompat="@drawable/icono_sin_fondo" />

    <TextView
        android:id="@+id/tv_contratame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="5dp"
        android:text="Contrata.me"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_crearCuenta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="Crear Cuenta"
        android:textColor="@color/el_00867d"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_emailCrear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/teal_700"
        android:textStyle="bold"
        android:textSize="14dp"
        android:text="Email" />

    <EditText
        android:id="@+id/txt_EmaillCrear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:ems="10"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/tv_contrasenaCrear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="5dp"
        android:textColor="@color/teal_700"
        android:textStyle="bold"
        android:textSize="14dp"
        android:text="Contraseña" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edtPassText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxBackgroundColor="#00FFFFFF"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txt_contrasenaCrear"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="15dp"
            android:hint=""
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>


    <RadioGroup
        android:id="@+id/rg_clientePrestador"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rb_cliente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:buttonTint="@color/el_00867d"
            android:text="Soy cliente"
            android:textColor="@color/el_00867d" />

        <RadioButton
            android:id="@+id/rb_prestador"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/el_00867d"
            android:text="Soy prestador"
            android:textColor="@color/el_00867d" />
    </RadioGroup>


    <CheckBox
        android:id="@+id/cb_terminos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:buttonTint="@color/el_00867d"
        android:text="Acepto los términos de servicio y las políticas de privacidad" />

    <Button
        android:id="@+id/btn_continuar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="Continuar" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Tienes una cuenta? " />

        <TextView
            android:id="@+id/tv_iniciaSesion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Inicia Sesion"
            android:textColor="@color/el_00867d" />
    </LinearLayout>

</LinearLayout>