<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="15dp"
    android:paddingVertical="10dp"
    tools:context=".Actividades.main.fragments.CrearRequerimientoFragment">

    <ProgressBar
        android:id="@+id/progressBar_ModificarReq"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_centerInParent="true"
        android:max="100"
        android:progressDrawable="@drawable/custom_progress" />

    <ScrollView
        android:id="@+id/scroll_crear_req"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:text="Título"
                android:textColor="@color/teal_700"
                android:textSize="14sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/titulo_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/titulo_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#00FFFFFF"
                    android:inputType="textPersonName" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:text="Rubro"
                android:textColor="@color/teal_700"
                android:textSize="14dp" />

            <Spinner
                android:id="@+id/spinnerRurbos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="8dp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:text="Descripción"
                android:textColor="@color/teal_700"
                android:textSize="14dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/descripcion_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/descripcion_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:gravity="start|top"
                    android:background="#00FFFFFF"
                    android:lines="5"
                    android:paddingBottom="5dp"/>
            </com.google.android.material.textfield.TextInputLayout>

            <ImageButton
                android:id="@+id/button_agregar_foto"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:paddingBottom="5dp"
                android:background="@drawable/foto_presione_aqui"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:text="Ubicación"
                android:textColor="@color/teal_700"
                android:textSize="14dp" />

            <fragment
                android:id="@+id/google_map"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="250dp" />

            <Button
                android:id="@+id/button_actualizar_map"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Actualizar ubicacion"
                />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingBottom="5dp">

                <Button
                    android:id="@+id/button_descartar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:backgroundTint="#FB2A2A"
                    android:layout_weight="0.25"
                    android:text="Descartar"
                    android:textSize="12sp" />

                <Button
                    android:id="@+id/button_publicar"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_weight="1"
                    android:text="Actualizar"
                    android:textSize="12sp" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>


</LinearLayout>