<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <SearchView
        android:id="@+id/tx_buscar"
        style="@android:style/Widget.Material.SearchView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_search"
        android:paddingHorizontal="10dp"
        android:paddingVertical="2dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp">

    </SearchView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvServicios"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />
</LinearLayout>